# rnnoise

./: README.md
alsa_rnnoise-v1.0/: README.rst  meson.build  meson_options.txt
alsa_rnnoise-v1.0/.builds/: debian.yml  readme.yml
alsa_rnnoise-v1.0/src/: main.c
audioeffects/: 60-rnnoise.conf  asound.conf  install.sh  uninstall.sh
